[gd_scene load_steps=54 format=2]

[ext_resource path="res://Stages/last corridor/sans/idle/Idle0007.png" type="Texture" id=1]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0003.png" type="Texture" id=2]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0004.png" type="Texture" id=3]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0001.png" type="Texture" id=4]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0017.png" type="Texture" id=5]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0005.png" type="Texture" id=6]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0022.png" type="Texture" id=7]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0006.png" type="Texture" id=8]
[ext_resource path="res://Stages/last corridor/sans/dodge/Dodge0004.png" type="Texture" id=9]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0015.png" type="Texture" id=10]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0009.png" type="Texture" id=11]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0010.png" type="Texture" id=12]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0020.png" type="Texture" id=13]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0016.png" type="Texture" id=14]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0021.png" type="Texture" id=15]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0023.png" type="Texture" id=16]
[ext_resource path="res://Stages/last corridor/sans/dodge/Dodge0001.png" type="Texture" id=17]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0012.png" type="Texture" id=18]
[ext_resource path="res://Stages/last corridor/sans/dodge/Dodge0002.png" type="Texture" id=19]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0008.png" type="Texture" id=20]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0019.png" type="Texture" id=21]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0011.png" type="Texture" id=22]
[ext_resource path="res://Stages/last corridor/sans/dodge/Dodge0003.png" type="Texture" id=23]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0018.png" type="Texture" id=24]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0014.png" type="Texture" id=25]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0013.png" type="Texture" id=26]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0002.png" type="Texture" id=27]
[ext_resource path="res://Stages/last corridor/sans/idle/Idle0024.png" type="Texture" id=28]
[ext_resource path="res://Stages/last corridor/Sans.gd" type="Script" id=29]
[ext_resource path="res://Sounds/snd_battleenter_ch1.wav" type="AudioStream" id=30]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00003.png" type="Texture" id=31]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00004.png" type="Texture" id=32]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00001.png" type="Texture" id=33]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00005.png" type="Texture" id=34]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00006.png" type="Texture" id=35]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00008.png" type="Texture" id=36]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00002.png" type="Texture" id=37]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00009.png" type="Texture" id=38]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00007.png" type="Texture" id=39]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00014.png" type="Texture" id=40]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00011.png" type="Texture" id=41]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00013.png" type="Texture" id=42]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00015.png" type="Texture" id=43]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00010.png" type="Texture" id=44]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00012.png" type="Texture" id=45]
[ext_resource path="res://Stages/last corridor/sans/anim0/anim00016.png" type="Texture" id=46]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 27 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 16 ), ExtResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 37 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 39 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 44 ), ExtResource( 41 ), ExtResource( 45 ), ExtResource( 42 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 46 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0, 0, 0.207843, 1, 0.227451, 0, 0.364706, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.38
color_ramp = SubResource( 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 57.5, 67.1875 )

[node name="Sans" type="Position2D"]
position = Vector2( 380, 228 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 29 )

[node name="Idle" type="AnimatedSprite" parent="." groups=["Sans Animations"]]
position = Vector2( -57.4999, -140 )
frames = SubResource( 4 )
animation = "idle"
frame = 12
playing = true
centered = false

[node name="Attack1" type="AnimatedSprite" parent="." groups=["Sans Animations"]]
position = Vector2( -170, -287.5 )
frames = SubResource( 10 )
centered = false

[node name="DodgeParticle" type="Particles2D" parent="."]
position = Vector2( 0, -67.4999 )
scale = Vector2( 0.95, 0.95 )
z_index = -1
emitting = false
amount = 10
lifetime = 0.2
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 17 )

[node name="Dodge" type="AnimatedSprite" parent="." groups=["Sans Animations"]]
visible = false
position = Vector2( -69.5, -137.5 )
scale = Vector2( 0.95, 0.95 )
frames = SubResource( 5 )
frame = 1
playing = true
centered = false

[node name="Area2D" type="Area2D" parent="."]
z_index = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -67.8125 )
shape = SubResource( 6 )

[node name="Dodging" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
